# QuantFactorBacktest

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DATA_FLOW.md  STRATEGY.md  WIKI.md
examples/: minimal_run.py  tushare_run.py
src/quant_factor_backtest/: __init__.py  domain.py
src/quant_factor_backtest/backtest/: engine.py  plotting.py
src/quant_factor_backtest/constants/: __init__.py  backtest.py  factors.py  portfolio.py  tushare.py
src/quant_factor_backtest/data/: __init__.py  cache.py  models.py  tushare.py
src/quant_factor_backtest/data/tushare/: __init__.py  assemble.py  client.py  convert.py  fetch.py
src/quant_factor_backtest/factors/: __init__.py  base.py  builtin.py
src/quant_factor_backtest/portfolio/: __init__.py  construction.py
src/quant_factor_backtest/research/: pipeline.py
src/quant_factor_backtest/universe/: __init__.py  filters.py
tests/: test_backtest.py  test_cache.py  test_factors.py  test_pipeline.py  test_plotting.py  test_portfolio.py  test_tushare.py  test_universe.py
